# CQRS_Event_Sourcing

./: .gitignore  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  init.sql  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: admin_routes.py  command_routes.py  query_routes.py
backend/app/commands/: account_commands.py
backend/app/domain/: aggregate.py  commands.py  events.py  exceptions.py
backend/app/infrastructure/: database.py  event_bus.py  event_store.py  snapshot_store.py
backend/app/projectors/: balance_projector.py  transaction_projector.py
backend/app/queries/: account_queries.py
backend/migrations/: 001_create_events_table.py  002_create_read_model_views.py  env.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py  test_concurrency.py
backend/tests/unit/: test_aggregate.py  test_events.py
docs/adr/: 001-why-event-sourcing.md  002-optimistic-concurrency.md  003-in-process-vs-kafka.md  004-snapshot-threshold.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: accounts.ts  client.ts
frontend/src/components/: AccountCard.tsx  BalanceHero.tsx  CommandPanel.tsx  ErrorBoundary.tsx  EventLogViewer.tsx  OpenAccountModal.tsx  Skeletons.tsx  StatsBar.tsx  TransactionTable.tsx
frontend/src/hooks/: useAccount.ts  useCommands.ts
frontend/src/pages/: AccountDetail.tsx  Dashboard.tsx
